Enabled google maps api v3 experimental

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="container"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiU_gUSYu47EUyESCC21IStk22Uj6mgus"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBiU_gUSYu47EUyESCC21IStk22Uj6mgus"></script>
   <script src="js/bundle.js"></script>
 </body>
 </html>
