Display loading indicator until React is ready

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-  <div id="container"></div>
+  <div id="container">
+    <div class="status">
+      <span>Loading...</span>
+    </div>
+  </div>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBiU_gUSYu47EUyESCC21IStk22Uj6mgus"></script>
   <script src="js/bundle.js"></script>
 </body>
