--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Tesla Trip Planner</title>
-  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
   <div id="container">
     <div class="status">
       <span>Loading...</span>
