Updated loading message CSS class to .notification

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
   <div id="container">
-    <div class="status">
+    <div class="notification">
       <span>Loading...</span>
     </div>
   </div>
