--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <span>Loading...</span>
     </div>
   </div>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBiU_gUSYu47EUyESCC21IStk22Uj6mgus"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&&libraries=places&key=AIzaSyBiU_gUSYu47EUyESCC21IStk22Uj6mgus"></script>
   <script src="js/bundle.js"></script>
 </body>
 </html>
